--- a/dev.html
+++ b/dev.html
@@ -171,23 +171,11 @@
         // !!!! IMPORTANT !!!! MAKE THE ABOVE BLINK IN YOUR HEAD
       };
     </script>
-    <script>
-      (function (i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r;
-        i[r] = i[r] || function () {
-          (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date();
-        a = s.createElement(o),
-          m = s.getElementsByTagName(o)[0];
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a, m)
-      })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
-      ga('create', 'UA-87734787-2', 'auto');
-      ga('send', 'pageview');
-
-    </script>
+    <script data-goatcounter="https://dataio.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
+    <noscript>
+        <img src="https://dataio.goatcounter.com/count?p=/test-noscript">
+    </noscript>
 </head>
 <body>
 <section id='abstract' data-include="section/abstract.md" data-include-format="markdown"></section>
