--- a/dev.html
+++ b/dev.html
@@ -93,7 +93,7 @@
         // specification status (e.g. WD, LCWD, WG-NOTE, etc.). If in doubt use ED.
         specStatus: "unofficial",
         // the specification's short name, as in http://www.w3.org/TR/short-name/
-        shortName: "target",
+        shortName: "rml-target",
         // if your specification has a subtitle that goes below the main
         // formal title, define it here
         // subtitle   :  "White Paper",
@@ -107,7 +107,7 @@
         // previousPublishDate: "2015-10-15",
         // previousMaturity: "FPWD",
         // if there a publicly available Editor's Draft, this is the link
-        edDraftURI: "https://rml.io/specs/target",
+        edDraftURI: "https://rml.io/specs/rml-target",
         // if this is a LCWD, uncomment and set the end of its review period
         // lcEnd: "2009-08-05",
         // editors, add as many as you like
@@ -141,22 +141,22 @@
           {
             key: "This Version",
             data: [{
-              value: "https://rml.io/specs/target/%thisDate%/",
-              href: "https://rml.io/specs/target/%thisDate%/"
+              value: "https://rml.io/specs/rml-target/%thisDate%/",
+              href: "https://rml.io/specs/rml-target/%thisDate%/"
             }]
           },
           {
             key: "Previous Version",
             data: [{
-              value: "https://rml.io/specs/target/%prevDate%/",
-              href: "https://rml.io/specs/target/%prevDate%/"
+              value: "https://rml.io/specs/rml-target/%prevDate%/",
+              href: "https://rml.io/specs/rml-target/%prevDate%/"
             }]
           },
           {
             key: "Website",
             data: [{
-              value: "https://rml.io/target",
-              href: "https://rml.io/target"
+              value: "https://rml.io/",
+              href: "https://rml.io/"
             }]
           }
         ],
