abstract: refer to specification instead of paper
The ICWE 2021 paper is referenced in the specification anyway

--- a/dev.html
+++ b/dev.html
@@ -41,21 +41,16 @@
             publisher: "FnO team",
             date: "05 January 2021",
           },
-          "paper": { // TODO: use DOI
+          "DataIO": {
             authors: [
               "Dylan Van Assche",
-              "Gerald Haesendonck",
-              "Gertjan De Mulder",
-              "Thomas Delva",
-              "Pieter Heyvaert",
-              "Ben De Meester",
               "Anastasia Dimou"
             ],
-            title: "Leveraging Web of Things W3C recommendations for knowledge graphs generation",
-            href: "https://dylanvanassche.be/publications/#icwe2021",
-            status: "In Proceedings of the 21st International Conference on Web Engineering 2021",
-            publisher: "Springer",
-            date: "2021", // TODO: add month
+            title: "Target",
+            href: "https://rml.io/specs/target",
+            status: "Unofficial Draft",
+            publisher: "RML team",
+            date: "24 March 2021",
           },
         },
         // These may become useful if the document gets a more 'official' status
