examples: improve examples multiple targets
Move the statements about multiple targets to the examples, otherwise it seems disconnected

--- a/dev.html
+++ b/dev.html
@@ -160,7 +160,11 @@
 
 <section data-include="section/target-in-rml.md" data-include-format="markdown"></section>
 
-<section data-include="section/examples.md" data-include-format="markdown"></section>
+<section data-include="section/single-targets.md" data-include-format="markdown"></section>
+
+<section data-include="section/multiple-targets.md" data-include-format="markdown"></section>
+
+<section data-include="section/overriding-targets.md" data-include-format="markdown"></section>
 
 </body>
 </html>
