target-in-rml: split example in multiple parts

--- a/dev.html
+++ b/dev.html
@@ -104,6 +104,13 @@
             publisher: "W3C",
             date: "21 March 2013",
           },
+          "CSVW": {
+            title: "CSV on the Web: A Primer",
+            href: "https://www.w3.org/TR/tabular-data-primer/",
+            status: "W3C Working Group Note",
+            publisher: "W3C",
+            date: "25 February 2016",
+          },
           "RML": {
             title: "RDF Mapping Language (RML)",
             href: "https://rml.io/specs/rml",
