spec: 'input data' instead of 'input RDF'
RML mappings can transform any input data into a knowledge graph

--- a/dev.html
+++ b/dev.html
@@ -31,7 +31,7 @@
             padding: 0.4em 0.4em;
             width: 18em;
         }
-        /* Input RDF example */
+        /* Input data example */
         pre.ex-input {
             background: #cee;
         }
@@ -40,7 +40,7 @@
             border: 1px solid #acc;
         }
         pre.ex-input:before {
-            content: "Example input RDF";
+            content: "Example input data";
         }
         /* RML mapping example */
         pre.ex-mapping {
@@ -110,6 +110,13 @@
             status: "W3C Working Group Note",
             publisher: "W3C",
             date: "25 February 2016",
+          },
+          "DCAT": {
+            title: "Data Catalog Vocabulary (DCAT) Version 2",
+            href: "https://www.w3.org/TR/vocab-dcat-2/",
+            status: "W3C Recommendation",
+            publisher: "W3C",
+            date: "04 February 2020",
           },
           "RML": {
             title: "RDF Mapping Language (RML)",
