spec: reduce example font size

--- a/dev.html
+++ b/dev.html
@@ -17,6 +17,7 @@
         pre.ex-access {
             margin-top: 1.5em;
             padding: 1em; 
+            font-size: 75%;
         }
         pre.ex-input:before,
         pre.ex-mapping:before,
