spec: render new version (v1.0.0)

--- a/dev.html
+++ b/dev.html
@@ -138,8 +138,8 @@
               "Dylan Van Assche",
               "Anastasia Dimou"
             ],
-            title: "Target",
-            href: "https://rml.io/specs/target",
+            title: "DataIO",
+            href: "https://rml.io/specs/dataio",
             status: "Unofficial Draft",
             publisher: "RML team",
             date: "24 March 2021",
