spec: render new version (v1.0.0)

--- a/dev.html
+++ b/dev.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Target</title>
+    <title>DataIO</title>
     <meta charset='utf-8'>
     <link rel="stylesheet" type="text/css" href="./resources/css/extras.css"/>
     <script src="https://www.w3.org/Tools/respec/respec-w3c" class="remove" defer></script>
@@ -171,7 +171,7 @@
         // specification status (e.g. WD, LCWD, WG-NOTE, etc.). If in doubt use ED.
         specStatus: "unofficial",
         // the specification's short name, as in http://www.w3.org/TR/short-name/
-        shortName: "rml-target",
+        shortName: "dataio",
         // if your specification has a subtitle that goes below the main
         // formal title, define it here
         // subtitle   :  "White Paper",
@@ -185,7 +185,7 @@
         // previousPublishDate: "2015-10-15",
         // previousMaturity: "FPWD",
         // if there a publicly available Editor's Draft, this is the link
-        edDraftURI: "https://rml.io/specs/rml-target",
+        edDraftURI: "https://rml.io/specs/dataio",
         // if this is a LCWD, uncomment and set the end of its review period
         // lcEnd: "2009-08-05",
         // editors, add as many as you like
@@ -219,15 +219,15 @@
           {
             key: "This Version",
             data: [{
-              value: "https://rml.io/specs/rml-target/%thisDate%/",
-              href: "https://rml.io/specs/rml-target/%thisDate%/"
+              value: "https://rml.io/specs/dataio/%thisDate%/",
+              href: "https://rml.io/specs/dataio/%thisDate%/"
             }]
           },
           {
             key: "Previous Version",
             data: [{
-              value: "https://rml.io/specs/rml-target/%prevDate%/",
-              href: "https://rml.io/specs/rml-target/%prevDate%/"
+              value: "https://rml.io/specs/dataio/%prevDate%/",
+              href: "https://rml.io/specs/dataio/%prevDate%/"
             }]
           },
           {
