dev: update editors

--- a/dev.html
+++ b/dev.html
@@ -192,19 +192,18 @@
         // only "name" is required
         editors: [
           {
-            name: "Dylan Van Assche"
-            , mailto: "dylan.vanassche@ugent.be"
-            , company: "Ghent University &ndash; imec &ndash; IDLab"
-            , url: "https://dylanvanassche.be/#me",
+            name: "Dylan Van Assche",
+            mailto: "dylan.vanassche@ugent.be",
+            company: "Ghent University &ndash; imec &ndash; IDLab",
             orcidid: "0000-0002-7195-9935",
             companyURL: "http://idlab.technology/"
           },
           {
-            name: "Anastasia Dimou"
-            , mailto: "anastasia.dimou@ugent.be"
-            , company: "Ghent University &ndash; imec &ndash; IDLab",
+            name: "Anastasia Dimou",
+            mailto: "anastasia.dimou@kuleuven.be",
+            company: "KU Leuven, Department of Computer Science",
             orcidid: "0000-0003-2138-7972",
-            companyURL: "http://idlab.technology/"
+            companyURL: "https://wms.cs.kuleuven.be/cs/english/"
           }
         ],
         // name of the WG
