--- a/dev.html
+++ b/dev.html
@@ -268,6 +268,8 @@
 
 <section data-include="section/overview.md" data-include-format="markdown"></section>
 
+<section data-include="section/source-vocabulary.md" data-include-format="markdown"></section>
+
 <section data-include="section/target-vocabulary.md" data-include-format="markdown"></section>
 
 </body>
