rml-target-source-spec: address issues
Fixes #15
Fixes #14
Fixes #13
Fixes #12
Fixes #10
Fixes #9
Fixes #5

--- a/dev.html
+++ b/dev.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>DataIO</title>
+    <title>Source &amp; Target</title>
     <meta charset='utf-8'>
     <link rel="stylesheet" type="text/css" href="./resources/css/extras.css"/>
     <script src="https://www.w3.org/Tools/respec/respec-w3c" class="remove" defer></script>
@@ -284,6 +284,14 @@
 <section data-include="section/source-vocabulary.md" data-include-format="markdown"></section>
 
 <section data-include="section/target-vocabulary.md" data-include-format="markdown"></section>
+
+<section data-include="section/target-in-rml.md" data-include-format="markdown"></section>
+
+<section data-include="section/single-targets.md" data-include-format="markdown"></section>
+
+<section data-include="section/multiple-targets.md" data-include-format="markdown"></section>
+
+<section data-include="section/overriding-targets.md" data-include-format="markdown"></section>
 
 </body>
 </html>
