rendered: update HTML rendering

--- a/dev.html
+++ b/dev.html
@@ -184,7 +184,7 @@
         // specification status (e.g. WD, LCWD, WG-NOTE, etc.). If in doubt use ED.
         specStatus: "unofficial",
         // the specification's short name, as in http://www.w3.org/TR/short-name/
-        shortName: "dataio",
+        shortName: "rml-target-source",
         // if your specification has a subtitle that goes below the main
         // formal title, define it here
         // subtitle   :  "White Paper",
@@ -198,7 +198,7 @@
         // previousPublishDate: "2015-10-15",
         // previousMaturity: "FPWD",
         // if there a publicly available Editor's Draft, this is the link
-        edDraftURI: "https://rml.io/specs/dataio",
+        edDraftURI: "https://kg-construct.github.io/rml-target-source-spec/",
         // if this is a LCWD, uncomment and set the end of its review period
         // lcEnd: "2009-08-05",
         // editors, add as many as you like
