rendered: fix version and links

--- a/dev.html
+++ b/dev.html
@@ -231,22 +231,22 @@
           {
             key: "This Version",
             data: [{
-              value: "https://rml.io/specs/dataio/%thisDate%/",
-              href: "https://rml.io/specs/dataio/%thisDate%/"
+              value: "https://kg-construct.github.io/rml-target-source-spec/%thisDate%/",
+              href: "https://kg-construct.github.io/rml-target-source-spec/%thisDate%/"
             }]
           },
           {
             key: "Previous Version",
             data: [{
-              value: "https://rml.io/specs/dataio/%prevDate%/",
-              href: "https://rml.io/specs/dataio/%prevDate%/"
+              value: "https://kg-construct.github.io/rml-target-source-spec/%prevDate%/",
+              href: "https://kg-construct.github.io/rml-target-source-spec/%prevDate%/"
             }]
           },
           {
             key: "Website",
             data: [{
-              value: "https://rml.io/",
-              href: "https://rml.io/"
+              value: "https://www.w3.org/community/kg-construct/",
+              href: "https://www.w3.org/community/kg-construct/"
             }]
           }
         ],
