--- a/rendered.html
+++ b/rendered.html
@@ -327,8 +327,8 @@ var[data-type]:hover::after,var[data-type]:hover::before{opacity:1}
       "key": "This Version",
       "data": [
         {
-          "value": "https://rml.io/specs/dataio/%thisDate%/",
-          "href": "https://rml.io/specs/dataio/%thisDate%/"
+          "value": "https://kg-construct.github.io/rml-target-source-spec/%thisDate%/",
+          "href": "https://kg-construct.github.io/rml-target-source-spec/%thisDate%/"
         }
       ]
     },
@@ -336,8 +336,8 @@ var[data-type]:hover::after,var[data-type]:hover::before{opacity:1}
       "key": "Previous Version",
       "data": [
         {
-          "value": "https://rml.io/specs/dataio/%prevDate%/",
-          "href": "https://rml.io/specs/dataio/%prevDate%/"
+          "value": "https://kg-construct.github.io/rml-target-source-spec/%prevDate%/",
+          "href": "https://kg-construct.github.io/rml-target-source-spec/%prevDate%/"
         }
       ]
     },
@@ -345,8 +345,8 @@ var[data-type]:hover::after,var[data-type]:hover::before{opacity:1}
       "key": "Website",
       "data": [
         {
-          "value": "https://rml.io/",
-          "href": "https://rml.io/"
+          "value": "https://www.w3.org/community/kg-construct/",
+          "href": "https://www.w3.org/community/kg-construct/"
         }
       ]
     }
@@ -383,11 +383,11 @@ var[data-type]:hover::after,var[data-type]:hover::before{opacity:1}
         
         
         <dt>This Version</dt><dd>
-    <a href="https://rml.io/specs/dataio/%thisDate%/">https://rml.io/specs/dataio/%thisDate%/</a>
+    <a href="https://kg-construct.github.io/rml-target-source-spec/%thisDate%/">https://kg-construct.github.io/rml-target-source-spec/%thisDate%/</a>
   </dd><dt>Previous Version</dt><dd>
-    <a href="https://rml.io/specs/dataio/%prevDate%/">https://rml.io/specs/dataio/%prevDate%/</a>
+    <a href="https://kg-construct.github.io/rml-target-source-spec/%prevDate%/">https://kg-construct.github.io/rml-target-source-spec/%prevDate%/</a>
   </dd><dt>Website</dt><dd>
-    <a href="https://rml.io/">https://rml.io/</a>
+    <a href="https://www.w3.org/community/kg-construct/">https://www.w3.org/community/kg-construct/</a>
   </dd>
       </dl>
     </details>
@@ -413,7 +413,7 @@ for specifying how a Knowledge Graph should be exported to a given target. </p>
 and is therefore not limited to a specific set of targets or data sources. 
 The current document describes the Logical Source and Logical Target concepts 
 through definitions and examples.</p>
-<p>The version of this document is <em>v0.2</em>.</p>
+<p>The version of this document is <em>v1.1</em>.</p>
 </section>
 
 <section id="sotd" class="introductory"><h2>Status of This Document</h2><p>
