--- a/dev.html
+++ b/dev.html
@@ -176,6 +176,42 @@
             publisher: "Springer",
             date: "2021", // TODO: add month
           },
+          "RML": {
+            title: "RDF Mapping Language (RML)",
+            href: "https://rml.io/specs/rml",
+            status: "W3C Unofficial Draft",
+            publisher: "RML Team",
+            authors: [
+              "Anastasia Dimou",
+              "Miel Vander Sande",
+              "Ben De Meester",
+              "Pieter Heyvaert",
+              "Thomas Delva"
+            ],
+            date: "16 November 2022",
+          },
+          "FnO": {
+            title: "Function Ontology (FnO)",
+            href: "https://fno.io/spec",
+            status: "W3C Unofficial Draft",
+            publisher: "FnO Team",
+            authors: [
+              "Ben De Meester",
+              "Anastasia Dimou",
+              "Florian Kleedorfer"
+            ],
+            date: "10 November 2021",
+          },
+          "CSVW": {
+            title: "CSV on the Web: A Primer",
+            href: "https://www.w3.org/TR/tabular-data-primer/",
+            status: "W3C Working Group Note",
+            publisher: "W3C",
+            authors: [
+              "Jeni Tennison"
+            ],
+            date: "25 February 2016",
+          }
         },
         // These may become useful if the document gets a more 'official' status
         // postProcess : [ postProc ],
@@ -281,12 +317,17 @@
 
 <section data-include="section/overview.md" data-include-format="markdown"></section>
 
+<!-- Vocabularies -->
 <section data-include="section/source-vocabulary.md" data-include-format="markdown"></section>
 
 <section data-include="section/target-vocabulary.md" data-include-format="markdown"></section>
 
-<section data-include="section/target-in-rml.md" data-include-format="markdown"></section>
+<!-- Alignment RML -->
+<section data-include="section/logical-source-in-rml.md" data-include-format="markdown"></section>
 
+<section data-include="section/logical-target-in-rml.md" data-include-format="markdown"></section>
+
+<!-- Target combinations -->
 <section data-include="section/single-targets.md" data-include-format="markdown"></section>
 
 <section data-include="section/multiple-targets.md" data-include-format="markdown"></section>
