dev: rework as CG-DRAFT

--- a/dev.html
+++ b/dev.html
@@ -174,13 +174,13 @@
             href: "https://dylanvanassche.be/publications/#icwe2021",
             status: "In Proceedings of the 21st International Conference on Web Engineering 2021",
             publisher: "Springer",
-            date: "2021", // TODO: add month
+            date: "11 May 2021",
           },
           "RML": {
             title: "RDF Mapping Language (RML)",
             href: "https://rml.io/specs/rml",
             status: "W3C Unofficial Draft",
-            publisher: "RML Team",
+            publisher: "IDLab - Ghent University - imec",
             authors: [
               "Anastasia Dimou",
               "Miel Vander Sande",
@@ -192,9 +192,9 @@
           },
           "FnO": {
             title: "Function Ontology (FnO)",
-            href: "https://fno.io/spec",
-            status: "W3C Unofficial Draft",
-            publisher: "FnO Team",
+            href: "https://w3id.org/function/spec",
+            status: "Unofficial Draft",
+            publisher: "IDLab - Ghent University - imec",
             authors: [
               "Ben De Meester",
               "Anastasia Dimou",
@@ -218,9 +218,9 @@
         doRdfa: "true",
         processVersion: 2021,
         // specification status (e.g. WD, LCWD, WG-NOTE, etc.). If in doubt use ED.
-        specStatus: "unofficial",
+        specStatus: "CG-DRAFT",
         // the specification's short name, as in http://www.w3.org/TR/short-name/
-        shortName: "rml-target-source",
+        shortName: "rml-io",
         // if your specification has a subtitle that goes below the main
         // formal title, define it here
         // subtitle   :  "White Paper",
@@ -234,7 +234,7 @@
         // previousPublishDate: "2015-10-15",
         // previousMaturity: "FPWD",
         // if there a publicly available Editor's Draft, this is the link
-        edDraftURI: "https://kg-construct.github.io/rml-target-source-spec/",
+        edDraftURI: "https://w3id.org/rml/io/spec",
         // if this is a LCWD, uncomment and set the end of its review period
         // lcEnd: "2009-08-05",
         // editors, add as many as you like
@@ -243,7 +243,7 @@
           {
             name: "Dylan Van Assche",
             mailto: "dylan.vanassche@ugent.be",
-            company: "Ghent University &ndash; imec &ndash; IDLab",
+            company: "IDLab &ndash; Ghent University &ndash; imec",
             orcidid: "0000-0002-7195-9935",
             companyURL: "http://idlab.technology/"
           },
@@ -255,6 +255,8 @@
             companyURL: "https://wms.cs.kuleuven.be/cs/english/"
           }
         ],
+        group: "kg-construct",
+        doJsonLd: true,
         // name of the WG
         //wg: "Digital Publishing Interest Group",
         // URI of the public WG page
@@ -267,15 +269,15 @@
           {
             key: "This Version",
             data: [{
-              value: "https://kg-construct.github.io/rml-target-source-spec/%thisDate%/",
-              href: "https://kg-construct.github.io/rml-target-source-spec/%thisDate%/"
+              value: "https://w3id.org/rml/io/spec/%thisDate%/",
+              href: "https://w3id.org/rml/io/spec/%thisDate%/"
             }]
           },
           {
             key: "Previous Version",
             data: [{
-              value: "https://kg-construct.github.io/rml-target-source-spec/%prevDate%/",
-              href: "https://kg-construct.github.io/rml-target-source-spec/%prevDate%/"
+              value: "https://w3id.org/rml/io/spec/%prevDate%/",
+              href: "https://w3id.org/rml/io/spec/%prevDate%/"
             }]
           },
           {
